# kaldi-serve

./: .bmpfile  .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.kaldi  Makefile  README.md  README.org  build.sh  get_models.sh  install.sh  main.py  pyproject.toml  redis_utils.py  requirements.txt  setup.py  tdnn_decode.cc  tdnn_wrapper.cc  tdnn_wrapper.h  utils.py
examples/aspire/: model_spec.toml
examples/aspire/utils/: setup_aspire_chain_model.sh
include/kaldiserve/: config.hpp  decoder.hpp  model.hpp  types.hpp  utils.hpp
kaldi/: kaldi.grpc.pb.cc  kaldi.grpc.pb.h  kaldi_server.cc
kaldi_serve/: __init__.py  config.py  inference.py
kaldi_serve/app/: __init__.py  server.py
plugins/grpc/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.lb  Makefile  README.md
plugins/grpc/client/: Makefile  README.md  pyproject.toml
plugins/grpc/client/kaldi_serve/: __init__.py  core.py  kaldi_serve_pb2.py  kaldi_serve_pb2_grpc.py  utils.py
plugins/grpc/client/scripts/: batch_decode.py  list_models.py
plugins/grpc/examples/aspire/: README.md  run_server.sh
plugins/grpc/examples/aspire/model/: word_boundary.int  words.txt
plugins/grpc/examples/aspire/model/conf/: ivector_extractor.conf
plugins/grpc/examples/aspire/model/ivector_extractor/: final.dubm  final.mat  global_cmvn.stats
plugins/grpc/protos/: kaldi_serve.grpc.pb.cc  kaldi_serve.grpc.pb.h  kaldi_serve.pb.cc  kaldi_serve.pb.h  kaldi_serve.proto
plugins/grpc/registrar/: main.go
plugins/grpc/src/: app.cc  config.hpp  server.hpp
protos/: kaldi_serve.proto
python/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
python/kaldi_serve/: core.py  kaldi_serve_pb2.py  kaldi_serve_pb2_grpc.py  utils.py
python/kaldiserve/: __init__.py
python/kaldiserve_pybind/: decoder.cpp  kaldiserve_pybind.cpp  kaldiserve_pybind.h  model.cpp  types.cpp  utils.cpp
python/kaldiserve_pybind/decoder/: decoder-factory.cpp  decoder-queue.cpp  decoder.cpp
python/kaldiserve_pybind/model/: model-chain.cpp
python/kaldiserve_pybind/utils/: utils-io.cpp
python/scripts/: batch_decode.py  batch_transcribe.py  example_client.py  parse_logs.py  requirements.txt  stream_client.py  stream_mic.py  transcribe.py
python/tests/: conftest.py  test_hi.yaml
python_stream/: README.md  pyproject.toml  stream_client.py
python_stream/kaldi/: __init__.py  kaldi.py  kaldi_serve_pb2.py  kaldi_serve_pb2_grpc.py
python_stream/tests/: conftest.py
resources/: load_test_req.json  model-spec.toml  model-spec.yaml
scripts/: inference_gmm_online.sh  inference_tdnn_online.sh  path.sh
src/: CMakeLists.txt  app.cc  config.cpp  config.hpp  decoder.cpp  decoder.hpp  kaldi.grpc.pb.cc  kaldi.grpc.pb.h  kaldi.pb.cc  kaldi.pb.h  kaldi.proto  kaldi_serve.grpc.pb.cc  kaldi_serve.grpc.pb.h  kaldi_serve.pb.cc  kaldi_serve.pb.h  kaldi_serve.proto  kaldi_serve_app.cc  model.cpp  model.hpp  server.cpp  server.hpp  utils.hpp
src/decoder/: CMakeLists.txt  decoder-batch.cpp  decoder-common.cpp  decoder-cpu.cpp  decoder-factory.cpp  decoder-queue.cpp  decoder.cpp
src/model/: CMakeLists.txt  model-chain.cpp
src/utils/: CMakeLists.txt  utils-io.cpp
test/: test_decoder.cc  test_server.cc
tests/: test_kaldi_serve.py
