[tool.poetry]
name = "kaldi-serve"
version = "0.1.0"
description = "Server component for kaldi based ASRs"
authors = ["Sujay S Kumar <sujay@vernacular.ai>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
docopt = "^0.6.2"
pydub = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
kaldi-serve = "kaldi_serve.app:main"

[[tool.poetry.source]]
name = "cheeseshop"
url = "https://cheeseshop.vernacular.ai"
