[tool.poetry]
name = "python_stream"
version = "0.1.0"
description = "Sample script for testing out kaldi streaming ASR"
authors = []

packages = [
  { include = "kaldi" },
  { include = "stream_client.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
pydub = "^0.23.1"
grpcio = "^1.22"
grpcio-tools = "^1.22"
docopt = "^0.6.2"
pyaudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pyyaml = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
