[tool.poetry]
name = "kaldi_serve"
version = "0.3.0"
description = "Python bindings for kaldi streaming ASR"
authors = []

[tool.poetry.dependencies]
python = "^3.6"
pydub = "^0.23.1"
grpcio = "^1.22"
grpcio-tools = "^1.22"
docopt = "^0.6.2"
pyaudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pyyaml = "^5.1"
tqdm = "^4.48.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
